Closed
Bug 844178
Opened 13 years ago
Closed 13 years ago
CSS position fixed no longer factors in scrollbar after hover
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
| Tracking | Status | |
|---|---|---|
| firefox22 | - | --- |
People
(Reporter: peter.wm.wong, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
427 bytes,
text/html
|
Details | |
|
12.30 KB,
patch
|
tnikkel
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:19.0) Gecko/20100101 Firefox/19.0
Build ID: 20130215130331
Steps to reproduce:
Setup:
- Firefox 19.0
- Mac OS X 10.8.2
1) Goto http://jsbin.com/ufatut/52
2) Notice the horizontal position of "HoverMe" text on the right (should be slight cut off of the "M")
3) Hover over the text
4) Notice the text moves to the RIGHT (not LEFT)
5) Un-hover the text
6) Notice the text does not move back to it's original position
Actual results:
Activating :hover psuedo class causes FF not to factor in the scrollbar anymore
Expected results:
The :hover psuedo class shouldn't cause the scrollbar to be ignored when positioning fixed positioned elements.
| Reporter | ||
Comment 1•13 years ago
|
||
A couple of sites we've noticed this affecting:
https://www.capitalone.com/
http://us.playstation.com/
On the right side, the "Feedback" Tab is affecting by this problem.
Severity: normal → major
Last good nightly: 2012-06-06
First bad nightly: 2012-06-07
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6338a8988917&tochange=7e4c2abb9fc9
Comment 3•13 years ago
|
||
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/c29b842c4159
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120606221720
Bad:
http://hg.mozilla.org/mozilla-central/rev/3933384d8315
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120607023619
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c29b842c4159&tochange=3933384d8315
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/f5a441d6929f
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120605210720
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/df6702c41ddd
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120605215419
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f5a441d6929f&tochange=df6702c41ddd
Triggered by:Bug 157681
Blocks: 157681
Component: Untriaged → Layout
Keywords: regression
OS: Mac OS X → All
Product: Firefox → Core
Updated•13 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•13 years ago
|
Attachment #717186 -
Attachment mime type: text/plain → text/html
Comment 4•13 years ago
|
||
Jet, can you please find an owner for this? I won't have the cycles to look into what's happening here... Thanks!
Assignee: nobody → matspal
| Reporter | ||
Comment 5•13 years ago
|
||
Any idea when this will be fixed?
| Assignee | ||
Comment 6•13 years ago
|
||
Break out the special adjustments of the containing block rect that
ViewportFrame::Reflow does for reflowing its positioned children.
Use that from RecomputePosition().
https://tbpl.mozilla.org/?tree=Try&rev=a24861bb5e13
Attachment #740406 -
Flags: review?(tnikkel)
Updated•13 years ago
|
Attachment #740406 -
Flags: review?(tnikkel) → review+
| Assignee | ||
Comment 7•13 years ago
|
||
Flags: in-testsuite+
Comment 8•13 years ago
|
||
We should probably get this on at least aurora.
tracking-firefox22:
--- → ?
Comment 9•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Comment 10•13 years ago
|
||
This has been in product since FF!6, no need to track but please go ahead with an uplift nomination if this is deemed low risk.
Comment 11•13 years ago
|
||
It seems that bug is related to the difference between "width" and "min-width": http://stackoverflow.com/a/15705522/980692
You need to log in
before you can comment on or make changes to this bug.
Description
•