Bug 844178 - Make RecomputePosition adjust the CB size as ViewportFrame::Reflow does.  r=tn